--- a/views/mediaItemList.html
+++ b/views/mediaItemList.html
@@ -18,12 +18,11 @@
                 {{::item.title}}
             </td>
             <td>                
-                {{::item.release_date | date:"dd/MM/yyyy"}}
-                <br>
-                ({{::item.release_date | ago}})
+                {{::item.upload_date | date:"dd/MM/yyyy"}}
             </td>
             <td>
-                <a href="#{{::getDetailUrl({ stuff: item })}}" class="btn btn-default">Rent</a>
+                <a href="#{{::getDetailUrl({ stuff: item })}}" class="btn btn-default">Detail</a>
+                <a href="#/movies" class="btn btn-default">Rent</a>
             </td>
         </tr>
     </tbody>
