Introducimos la pestaña del formulario con su correspondiente submit y post del username (falta que añada dateUpload y el userOwner). También he realizado el botón logout que limpia el localStorage y redirige al login.

--- a/views/MovieForm.html
+++ b/views/MovieForm.html
@@ -1,4 +1,4 @@
-<form>
+<form novalidate class="form-horizontal">
     <div class="form-group">
         <label for="exampleInputEmail1">Title</label>
         <input type="title" class="form-control" id="exampleInputEmail1" placeholder="Example:Deadpool" required>
