--- a/views/Menu.html
+++ b/views/Menu.html
@@ -15,6 +15,14 @@
                 <li ng-class="getClassForItem(paths.url.movies)">
                     <a href="#{{::paths.url.movies}}">{{::paths.titles.movies}}</a>
                 </li>
+                <li ng-class="getClassForItem(paths.url.movieNew)">
+                    <a href="#{{::paths.url.movieNew}}">{{::paths.titles.movieNew}}</a>
+                </li>
+                <li ng-class="getClassForItem(paths.url.home)">
+                    <a href="#{{::paths.url.home}}">
+                        <button class="navbar-brand glyphicon glyphicon-log-out" ng-click="clearUsername()">Logout</button>
+                    </a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
