--- a/views/MovieForm.html
+++ b/views/MovieForm.html
@@ -1,19 +1,19 @@
-<form novalidate class="form-horizontal">
+<form name="movieForm" novalidate class="form-horizontal" ng-submit="saveMovie()">
     <div class="form-group">
         <label for="exampleInputEmail1">Title</label>
-        <input type="title" class="form-control" id="exampleInputEmail1" placeholder="Example:Deadpool" required>
+        <input type="title" ng-model="model.title" class="form-control" id="exampleInputEmail1" placeholder="Example:Deadpool" required>
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Poster URL</label>
-        <input type="poster_url" class="form-control" id="exampleInputPassword1" placeholder="Example:http://www.googleimages.com/scdf.jpg" required>
+        <input type="poster_url" ng-model="model.poster_url" class="form-control" id="exampleInputPassword1" placeholder="Example:http://www.googleimages.com/scdf.jpg" required>
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">Movie URL</label>
-        <input type="movie_url" class="form-control" id="exampleInputEmail1" placeholder="Example:http://www.applemovies.com/batman.mp4" required>
+        <input type="movie_url" ng-model="model.movie_url" class="form-control" id="exampleInputEmail1" placeholder="Example:http://www.applemovies.com/batman.mp4" required>
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">Overview</label>
-        <input type="overview" class="form-control" id="exampleInputEmail1" placeholder="Example:Three years ago, two brothers broght back to the city...">
+        <input type="overview" ng-model="model.overview" class="form-control" id="exampleInputEmail1" placeholder="Example:Three years ago, two brothers broght back to the city...">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
