--- a/views/mediaItemList.html
+++ b/views/mediaItemList.html
@@ -17,12 +17,12 @@
             <td>
                 {{::item.title}}
             </td>
-            <td>                
+            <td>
                 {{::item.upload_date | date:"dd/MM/yyyy"}}
             </td>
             <td>
                 <a href="#{{::getDetailUrl({ stuff: item })}}" class="btn btn-default">Detail</a>
-                <a href="#{{::getDetailUrl({ stuff: item })}}" ng-click="saveRenter({ stuff: item })" class="btn btn-default" ng-disabled="item.renter == null">Rent</a>
+                <a href="#{{::getDetailUrl({ stuff: item })}}" ng-click="saveRenter({ stuff: item })" class="btn btn-default" ng-disabled="item.renter != null">Rent</a>
             </td>
         </tr>
     </tbody>
