Mejorada funcionalidad del botón rent y comienzo de lógica de la vista de detalle

--- a/views/Menu.html
+++ b/views/Menu.html
@@ -18,12 +18,10 @@
                 <li ng-class="getClassForItem(paths.url.movieNew)">
                     <a href="#{{::paths.url.movieNew}}">{{::paths.titles.movieNew}}</a>
                 </li>
-                <li ng-class="getClassForItem(paths.url.home)">
-                    <a href="#{{::paths.url.home}}">
-                        <button class="navbar-brand glyphicon glyphicon-log-out" ng-click="clearUsername()">Logout</button>
-                    </a>
-                </li>
             </ul>
+            <a href="#{{::paths.url.home}}" class="logout btn btn-default glyphicon glyphicon-log-out" ng-click="clearUsername()">
+                Logout
+            </a>
         </div>
         <!-- /.navbar-collapse -->
     </div>
