--- a/views/mediaItem.html
+++ b/views/mediaItem.html
@@ -1,7 +1,9 @@
 <div class="container">    
     <div class="row">
-        <video type="video/mp4" ng-src="{{::trustSrc({ stuff: model.movie_url })}}" width="600" controls>     
+        <video type="video/mp4" ng-src="{{::trustSrc({ stuff: model.movie_url })}}" ng-show="model.renter == user" width="600" controls>     
         </video>
+        Alquilado por {{model.renter}}
+        Usuario {{user}}
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-3">
@@ -12,11 +14,11 @@
             <div class="row">
                 <div class="col-xs-6">
                     <span ng-if="model.renter != null">
-                        Rented by {{::model.renter}} the {{::model.rent_date | date:"dd/MM/yyyy"}}
+                        Rented by {{model.renter}} the {{model.rent_date | date:"dd/MM/yyyy"}}
                     </span>
                     <span ng-if="model.renter == null">
                         <span ng-if="model.rent_date != null">
-                        Last rented the {{::model.rent_date | date:"dd/MM/yyyy"}}
+                        Last rented the {{model.rent_date | date:"dd/MM/yyyy"}}
                         </span>
                         <span ng-if="model.rent_date == null">
                         Never rented
