Arreglada muestra de películas en moviedetail

--- a/views/MediaItemDetail.html
+++ b/views/MediaItemDetail.html
@@ -2,6 +2,6 @@
 
 	<div ng-include="'views/ProgressBar.html'" ng-show="uiState=='loading'"></div>
 	
-	<media-item item="model" trust-src="trustSrc(stuff)" ng-show="uiState=='ideal'"></media-item>
+	<media-item item="model" user="user" trust-src="trustSrc(stuff)" ng-show="uiState=='ideal'"></media-item>
 
 </div>
